--- a/package.json
+++ b/package.json
@@ -15,8 +15,21 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.0",
+    "devicon": "^2.13.0",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.12.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "jquery": "^3.6.0",
+    "material-ui-popup-state": "^1.9.3",
+    "mdb-ui-kit": "^3.9.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-dom": "^17.0.1",
+    "react-tsparticles": "^1.34.0",
+    "styled-components": "^5.3.1"
   }
 }
